--- a/Informicus-test-project/Web.config
+++ b/Informicus-test-project/Web.config
@@ -11,8 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <remove name="LocakSqlServer"/>
-    <add name="PrimaryConnectionString" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=informicus;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
+    <remove name="LocalSqlServer"/>
+    <add name="PrimaryConnectionString" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=informicus;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
