Добавлен класс UsersGroupsViewModel и реализован вывод через частичное представление

--- a/Informicus-test-project/Informicus-test-project.csproj
+++ b/Informicus-test-project/Informicus-test-project.csproj
@@ -143,6 +143,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\EFUsersRepository.cs" />
+    <Compile Include="Models\ViewModels\UsersGroupViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +154,7 @@
     <Content Include="Views\Home\Users.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Groups.cshtml" />
+    <Content Include="Views\Home\UsersGroups.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
