--- a/Informicus-test-project/Web.config
+++ b/Informicus-test-project/Web.config
@@ -12,7 +12,7 @@
   </configSections>
   <connectionStrings>
     <remove name="LocalSqlServer"/>
-    <add name="PrimaryConnectionString" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=informicus;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="PrimaryConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
