--- a/Informicus-test-project/Informicus-test-project.csproj
+++ b/Informicus-test-project/Informicus-test-project.csproj
@@ -281,6 +281,7 @@
     <Content Include="Views\Register\Register.cshtml" />
     <Content Include="Views\Shared\_Breadcrumbs.cshtml" />
     <Content Include="Views\Expert\ExpertRequest.cshtml" />
+    <Content Include="Views\Register\RegisterUser.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
